updating code and testing with report writing

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -162,6 +162,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33e3d505-c9d3-481b-9448-ad0f1a9e5fa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.ensemble import RandomForestRegressor\n",
+    "# from sklearn.preprocessing import LabelEncoder\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import seaborn as sns\n",
+    "# import pandas as pd\n",
+    "# # Now proceed with encoding the categorical columns\n",
+    "# categorical_columns = ['LocationAbbr', 'LocationDesc', 'DataSource', 'ConditionType', 'Category', 'Cause_of_Death', 'Effect', 'ConsumptionPattern', 'Sex', 'AgeGroup']\n",
+    "\n",
+    "# label_encoders = {}  # To store the label encoders for each categorical column\n",
+    "# for col in categorical_columns:\n",
+    "#     le = LabelEncoder()\n",
+    "#     ardi_data_c[col] = le.fit_transform(ardi_data_c[col].astype(str))\n",
+    "#     label_encoders[col] = le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1edf33c6-7351-427a-abb3-372dce7f2b57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Density Plot for 'Data_Value_Alt' grouped by 'Sex'\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# sns.kdeplot(data=ardi_data_c, x='Data_Value_Alt', hue='Sex', fill=True)\n",
+    "# plt.title('Density Plot of Data_Value_Alt by Sex')\n",
+    "# plt.xlabel('Data_Value_Alt')\n",
+    "# plt.ylabel('Density')\n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6b4045c0-bb05-40e3-9a6f-ba5a93b5782a",
    "metadata": {},
    "outputs": [],
